app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require foundation_and_overrides

 */
#header {
  color: #252525;
  font-size: 5em;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  text-align: center;
  font-family: "Impact";
  background: image-url("scrolltexture.jpg");
  border: 3px solid #65110C;
  width: 10em;
  margin: auto;
  border-radius: 20px;
}
#description {
  color: #000000;
  font-size: 50px;
  width: 15em;
  margin: auto;
  background: white;
  text-align: center;
}
#show {
  background: image-url("Red_Portal.png") no-repeat;
  background-position: center;
  background-size: 300px;
  background-repeat: no-repeat;
  border-radius: 10px;
  height: 25em;
  margin: auto;
  margin-bottom: 20px;
  width: 15em;
  border-radius: 100px;
  padding: 1em;
}
#show img{
  position:relative;left:42px;top:80px;
  border-radius: 40px;
  height: 200px;
  width: 125px;
  overflow: hidden;

}
#reviewscheck {
  background: image-url("scroll.png") no-repeat;
  color: white;
  text-align: center;
  background-repeat: no-repeat;
  text-align: center;
  background-position: top;
  background-size: auto;
  padding: 1.8em;
}
#reviewscheck h3 {
  color: #831E2C;
  font-size: 50px;
  font-weight: bold;
  padding-bottom: 1em;
}
#reviewbody {
  font-size: 20px;
  color: #9D4242;
}
#reviewRating {
  text-align: center;
  color: #B35E58;
}
#linkage {
  color: #3D888E;
  background: #072E36;
  margin-left: 25px;
  font-size: 2em;
  text-align: left;
}




body {
  background: image-url("newbackround.jpg") no-repeat;
}

#wizindex {
  text-align: center;
  background-position: center;
  margin-left: 3em;
  margin-right: 3em;
  border-radius: 5em;
  margin-bottom: 5em;
}

#wizindex #wizlist {
  margin: auto;
  text-align: center;
}
#wizardElement {
border: 1.5px solid black;
padding-top: 40px;
margin-top: 10px;
margin-bottom: 40px;
width: 900px;
margin-left: auto;
margin-right: auto;
columns: 3;
background: linear-gradient(180deg, white, green,yellow,purple, black 10%);

}
ul {
  list-style-type: none;
}
#form {
  background: image-url("scrolltexture.jpg") no-repeat;
  text-align: center;
  width: 25em;
  margin: auto;
  margin-top: 2em;
  height: 1000px;
}

#form h4 {
  padding-top: 10px;
  color: black;
}


#form input {
  margin-top: 5em;
  padding-top: 3em;
  width: 20em;
  margin: auto;
}

#newWizard {
  text-align: center;
  color: #D16642;
  font-size: 2.5em;
  font-family: "Impact";
}
#newWizard label {
  text-align: left;
  color: #8832B7;
  font-size: 20px;
}


#reviewForm {
  text-align: center;
  background: white;
}
#loginform {
  background: white;
}
#loginform body {
  background: white;
}
#edituser {
background: white;
}
#newuser {
  background: white;
}
#deviseConfirm {
  background: white;
}
#editPassword {
background: white;
}
#forgotPassword {
  background: white;
}
#footer {
  text-align: center;
  background: image-url("scrolltexture.jpg") no-repeat;
  border: 3px solid #5C1912;
  width: 500px;
  margin: auto;
  font-weight: bold;
  padding-top: 10px;
}
#showpic  {
  margin:auto;
  image-orientation: center;
  position: absolute;
    top: -1; bottom:0; left: 0; right:0;
}
#indexbig{
  font-size: 2em;
}

.starsContainer{
  margin: 0 auto;
}
.star {
  color: grey;
  float: left;
}
.clickedStar {
  color: #FFC82C !important;
}

.reviewTile {
margin-bottom: 10px;

}

